--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Commit
         id: commit
         run: |
-          git config --global user.email hostsBot@fake.com
-          git config --global user.name hostsBot
+          git config --global user.email 140885477+yangFenTuoZi@users.noreply.github.com
+          git config --global user.name yangFenTuoZi
           git add .
           git commit -m "Update hosts"
         continue-on-error: true
